--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
 	<h1>Tetris</h1>
 	<div id="tetrisDiv"></div>
 	<div class="description">
-		<!-- &#8592;  &#8594; &#8595; to move, &#8593; to rotate,
-		<br>
-		P to pause
-		<br/> Click to play -->
+	 &#8592; &#8594; &#8595; to move, &#8593; to rotate,
+
 	</div>
 </div>
 
