--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <title>My Tetris Game</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
-  <script  src="js/index.js"></script>
+  <script  src="js/app.js"></script>
 </head>
 <body>
   <div class="container">
-	 <h1>Tetris</h1>
-	 <div id="tetrisDiv"></div>
-	 <div class="description">&#8592; &#8594; &#8595; to move, &#8593; to rotate</div>
+    <h1>Tetris</h1>
+    <div id="tetrisDiv"></div>
+    <div class="description">&#8592; &#8594; &#8595; to move, &#8593; to rotate</div>
   </div>
   <audio id="backgroundMusic"src="music/Tetris.mp3"></audio>
+  <audio id="lossMusic" src="music/GameOver.mp3"></audio>
 </body>
 </html>
